--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Reviews API for FEC repo",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon ./server/server.js"
   },
   "repository": {
     "type": "git",
@@ -18,8 +19,14 @@
   },
   "homepage": "https://github.com/May-Take-A-Second/ReviewsAPI#readme",
   "dependencies": {
+    "axios": "^0.21.1",
+    "csv-parser": "^3.0.0",
     "express": "^4.17.1",
     "mongoose": "^5.12.7",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "newrelic": "^7.3.1",
+    "node": "^16.0.0",
+    "nodemon": "^2.0.7",
+    "path": "^0.12.7"
   }
 }
